Fix z-index issue with #webcam-wrapper

--- a/sass/_page-env.scss
+++ b/sass/_page-env.scss
@@ -135,6 +135,7 @@
     top: 155px;
     bottom: 100px;
     overflow-y: auto;
+    z-index: 2;
 }
 
 #env-interface-pods-bkg {
@@ -438,7 +439,7 @@
             bottom: 60px;
             left: 20px;
             display: block;
-            z-index: :;
+            z-index: 1;
         }
 
         .env-data-pod--weather {
